--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="container-fluid mt-5 p-5 bg-secondary-subtle text-center">
           <div class="row">
             <div class="col-12">
-              <p>&#169;	2024 Gokul G G | All rights reserved</p>
+              <p>&#169;	2024 jinu varghese| All rights reserved</p>
             </div>
           </div>
         </div>
